--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,13 @@
     <string name="enter_home_address">Enter your starting address</string>
     <string name="address_example">Ex. 1700 Walnut Street, Philadelphia PA 19104</string>
     <string name="alt_address_example"> Ex. 500 Main Street, Anytown PA 19123</string>
-    <string name="set_to_work_time">Set days and time to check your commute</string>
+    <string name="set_to_work_time">Set time to check your commute</string>
     <string name="set_hours_to_home">Set time to check your home commute</string>
     <string name="save_commute_info">Save commute info</string>
     <string name="date_time_work_commute">Days and time of commute</string>
     <string name="date_time_home_commute">Days and time of home commute</string>
     <string name="save">Save Day</string>
+    <string name="save_all">Save</string>
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
     <string name="add_commute_short">Add Commute</string>
