--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">CommuteWatcher</string>
+    <string name="start_point">Start Point</string>
+    <string name="end_point">End Point </string>
+    <string name="start_time">Start Time: </string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="enter_work_address">Enter your destination address</string>
@@ -41,4 +44,6 @@
     <string name="google_app_id">160627016003</string>
     <string name="trips">Trips :</string>
     <string name="trips_active"> active</string>
+    <string name="next_commute_label">Next commute today:</string>
+    <string name="no_remaining_commutes_today">No more commutes are remaining. Time to relax!</string>
 </resources>
