--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,33 @@
     <string name="trips_active"> active</string>
     <string name="next_commute_label">Next commute today:</string>
     <string name="no_remaining_commutes_today">No more commutes are remaining. Time to relax!</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="app_active">Active</string>
+    <string name="app_inactive">Inactive</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+
+    <string name="pref_default_start_point">Default Starting Address</string>
+    <string name="pref_default_display_start"></string>
+    <string name="pref_default_start_descrip">Enter an address here to use as a default start point.</string>
+    <string name="pref_default_start_key">enable_disable</string>
+    <string name="pref_enable_disable_app">Enable/Disable App</string>
+    <string name="pref_enable_disable_key">default_start_address</string>
+    <string name="pref_enable_disable_descrip">Uncheck this if you don\'t need to hear from this app.</string>
+
+
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
